--- a/ZMgmtSystem/app.config
+++ b/ZMgmtSystem/app.config
@@ -6,11 +6,7 @@
             <section name="ZMgmtSystem.Database" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="ZMgmtSystem.My.MySettings.TestPOSConnectionString"
-            connectionString="Data Source=SAMSUNGLAPTOP;Initial Catalog=TestPOS;Persist Security Info=True;User ID=Zhack"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <system.diagnostics>
         <sources>
             <!-- This section defines the logging configuration for My.Application.Log -->
